# fnm-shim

./: AGENTS.md  Cargo.toml  README.md
.github/workflows/: ci.yml  nightly.yml  release.yml
scripts/: e2e-deep.ps1  e2e-deep.sh  e2e.ps1  e2e.sh
src/: cache.rs  cli.rs  error.rs  fnm_dir.rs  lib.rs  main.rs  resolver.rs
src/os/: exec.rs  mod.rs
tests/: canonical_invocation.rs
